durga@48demo.com.bleadtest/src/objects/User_Event_BVS__c.object
<CustomObject>
    <fields>
        <fullName>BVS_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BoothVisitSummary</label>
        <referenceTo>BoothVisitSummary__c</referenceTo>
        <relationshipLabel>User_Event_BVS</relationshipLabel>
        <relationshipName>User_Event_BVS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>User_Event_BVS</relationshipLabel>
        <relationshipName>User_Event_BVS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mrecordid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Mrecordid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UPE_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Profile Event</label>
        <referenceTo>User_Profile_Event__c</referenceTo>
        <relationshipLabel>User_Event_BVS</relationshipLabel>
        <relationshipName>User_Event_BVS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User_Event_BVS_Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_id__c</columns>
        <columns>BVS_id__c</columns>
        <columns>UPE_id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UEB_{00000000}</displayFormat>
        <label>UEB_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Event_BVS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>